--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
         </div>
 
         <div id="componente5" class="component" hidden>
-            <div class="parabens">
+            <div class="falha">
                 <h1>Tente novamente!</h1>
                 <p>Infelizmente você não adquiriu a nota necessária para obter a recompensa.</p>
                 <p id="falhou">Nota: </p>
-                <p>Recarregue a página e tente novamente.</p>
             </div>
+            <button onclick="window.location.reload()">Tentar novamente</button>
         </div>
     </div>
 </body>
