--- a/index.html
+++ b/index.html
@@ -32,32 +32,32 @@
         <div id="componente3" class="component" hidden>
             <h2>Responda todas as 10 perguntas e acerte no mínimo 6.</h2>
     
-            <p id="perguntaExibida" class="pgtExibida">1) Qual o super herói favorito de Rafael de Almeida?</p>
+            <p id="perguntaExibida" class="pgtExibida">1) Qual das seguintes opções você considera a melhor companhia?</p>
 
             <div id="perguntas" class="alternativas">
                 <div class="option">
                     <button class="button" id="btn1" onclick="prox('btn1')">
                         a
                     </button>
-                    <p id="op1">Legenda</p>
+                    <p id="op1">João Gomes</p>
                 </div>
                 <div class="option">
                     <button class="button" id="btn2" onclick="prox('btn2')">
                         b
                     </button>
-                    <p id="op2">Legenda</p>
+                    <p id="op2">Rafael de Almeida</p>
                 </div>
                 <div class="option">
                     <button class="button" id="btn3" onclick="prox('btn3')">
                         c
                     </button>
-                    <p id="op3">Legenda</p>
+                    <p id="op3">MC Pipokinha</p>
                 </div>
                 <div class="option">
                     <button class="button" id="btn4" onclick="prox('btn4')">
                         d
                     </button>
-                    <p id="op4">Legenda</p>
+                    <p id="op4">Pobres</p>
                 </div>
             </div>
         </div>
