--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <h1>PARABÉNS!</h1>
                 <p>Você adquiriu a nota necessária para obter a recompensa.</p>
                 <p id="aprovado">Nota: </p>
-                <p>Sua recompensa: <a target="_blank" href="https://chat.whatsapp.com/IWwOjFtYX7YKOkolzCrOd9"> clique aqui.</a></p>
+                <p>Sua recompensa: <a target="_blank" href="images/convite.png"> clique aqui.</a></p>
             </div>
         </div>
 
